<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>betteripfilter</groupId>
  <artifactId>Better-IP-Filter</artifactId>
  <version>1.4.0</version>
  <packaging>jar</packaging>

  <name>Better-IP-Filter</name>
  <description>Whitelist players by IPv4 address, CIDR range, or IP range.</description>

  <properties>
    <java.version>21</java.version>
    <!-- Controls which Paper API version we compile against.
         Modrinth Minotaur plugin reads this to populate supported game versions. -->
    <paper.api.version>1.21.4-R0.1-SNAPSHOT</paper.api.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>${paper.api.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <!-- Replace ${project.version} in plugin.yml at build time -->
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <proc>none</proc>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>

      <!--
        Minotaur: Modrinth publish plugin.
        Explicit <gameVersions> prevent autodetect failures on Modrinth.
        Publish via:  mvn modrinth:publish
        Requires env vars: MODRINTH_TOKEN, MODRINTH_PROJECT_ID
      -->
      <plugin>
        <groupId>com.modrinth.minotaur</groupId>
        <artifactId>Minotaur</artifactId>
        <version>2.8.7</version>
        <configuration>
          <token>${env.MODRINTH_TOKEN}</token>
          <projectId>${env.MODRINTH_PROJECT_ID}</projectId>
          <versionNumber>${project.version}</versionNumber>
          <versionType>release</versionType>
          <uploadFile>${project.build.directory}/${project.artifactId}-${project.version}.jar</uploadFile>
          <gameVersions>
            <gameVersion>1.21</gameVersion>
            <gameVersion>1.21.1</gameVersion>
            <gameVersion>1.21.2</gameVersion>
            <gameVersion>1.21.3</gameVersion>
            <gameVersion>1.21.4</gameVersion>
          </gameVersions>
          <loaders>
            <loader>paper</loader>
            <loader>folia</loader>
          </loaders>
          <failSilently>false</failSilently>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <pluginRepositories>
    <pluginRepository>
      <id>modrinth</id>
      <url>https://api.modrinth.com/maven</url>
    </pluginRepository>
  </pluginRepositories>
</project>
